--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">AADK3 Sample App 3</string>
+    <string name="switch_fragments">Switch Fragments</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="toolbar_app_logo">Toolbar App Logo</string>
+    <string name="social_app">Social App</string>
+    <string name="toolbar_messages_button">Toolbar Messages Button</string>
+    <string name="chats">Chats</string>
+    <string name="status">Status</string>
+    <string name="calls">Calls</string>
 </resources>
